# crypto-network-api

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  obfuscate_crypto_core.py  pyproject.toml  setup_crypto_core.py
crypto_core/: pyproject.toml
crypto_core_dist/: cost.py  normalizer.py  reliability.py  safety.py  speed.py  weights.py
src/: main.py
src/api/: __init__.py  deps.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/routes/: __init__.py  alerts.py  gas.py  networks.py  transactions.py
src/cache/: __init__.py  redis.py  ttl.py
src/core/: config.py  logging.py  metrics.py
src/ingestion/: __init__.py  normalizer.py  scheduler.py
src/ingestion/providers/: __init__.py  coingecko.py  defillama.py  gasnow.py  l2beat.py  rpc_nodes.py
src/mcp/: __init__.py  server.py
src/mcp/prompts/: __init__.py  transaction_advisor.py
src/mcp/resources/: __init__.py  alerts.py  gas.py  scores.py
src/mcp/tools/: __init__.py  compare_networks.py  estimate_cost.py  get_alerts.py  get_best_network.py  simulate_transaction.py
src/models/: __init__.py  network.py  response.py  score.py  transaction.py
src/scoring/: __init__.py  engine.py  weights.py
src/scoring/dimensions/: __init__.py  cost.py  reliability.py  safety.py  speed.py
tests/: conftest.py
tests/integration/: test_api.py  test_mcp.py
tests/unit/: test_ingestion.py  test_scoring.py
